--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,51 +1,51 @@
-name: java CI with maven
+name: Build project
 
 on:
   push:
     branches: [ develop ]
   pull_request:
-    branches: [ develop ]
-
+    branches: [ develop, master, increment/*, release/* ]
   workflow_dispatch:
 
 jobs:
   build:
+    name: ⏳ Build, test and deploy artifacts
     runs-on: judong
     timeout-minutes: 120
+    env:
+      SIGN_KEY_ID: ${{ secrets.GPG_KEYNAME }}
+      SIGN_KEY_PASS: ${{ secrets.GPG_PASSPHRASE }}
+      SIGN_KEY: ${{ secrets.GPG_SECRET_KEYS }}
+    if: ${{ github.event.pull_request.user.login != 'dependabot[bot]' }}
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+
     steps:
-      - uses: actions/checkout@v2
+      - name: ⬇️ Checkout repository
+        uses: actions/checkout@v2
         with:
           fetch-depth: 2
-        
-      - name: Project context
+
+      - name: 🛠️ Project context
         id: context
         uses: zero88/gh-project-context@v1.1
 
-      - name: Import GPG key
-        id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v4
-        with:
-          gpg_private_key: ${{ secrets.GPG_SECRET_KEYS }}
-          passphrase: ${{ secrets.GPG_PASSPHRASE }}
-          
-      - name: Set up JDK 11
+      - name: 🛠️ Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'zulu'
-          gpg-private-key: ${{ secrets.GPG_SECRET_KEYS }}
-          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
-      - name: List GPG keys
-        run: gpg --list-keys
+      - name: 🔢 Get the current PR number
+        uses: jwalton/gh-find-current-pr@v1
+        id: current-pr
+        with:
+          state: open
 
-      - name: Grep config
-        run: gpg --version
-
-      - name: Remove settings.xml
+      - name: 🧹 Remove settings.xml
         run: rm $HOME/.m2/settings.xml || true
-          
-      - name: Setup maven settings.xml
+
+      - name: 🛠️ Setup maven settings.xml
         uses: whelk-io/maven-settings-xml-action@v20
         with:
           servers: >
@@ -59,9 +59,13 @@ jobs:
                     "id": "judong-nexus-distribution",
                     "username": "${{ secrets.JUDONG_NEXUS_USERNAME }}",
                     "password": "${{ secrets.JUDONG_NEXUS_PASSWORD }}"
+                },
+                {
+                    "id": "ossrh",
+                    "username": "${{ secrets.SONATYPE_USERNAME }}",
+                    "password": "${{ secrets.SONATYPE_PASSWORD }}"
                 }
             ]
-
           mirrors: >
             [
                 {
@@ -71,31 +75,31 @@ jobs:
                  }
             ]
 
-
-      - name: Print settings.xml
-        run: cat $HOME/.m2/settings.xml
-
-      - name: List GPG keys
-        run: gpg --list-keys
-
-      - name: Calculate version number
+      - name: 🔢 Calculate version number
         id: version
         run: |-
-          TAG_NAME=$(echo "${{ steps.context.outputs.branch }}" | cut -d ' ' -f2 | tr '#\/\.-' '_')
-          BASE_VERSION=$(./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dtycho.mode=maven -DskipModules=true -Dexpression=project.version -q -DforceStdout | cut -d'-' -f 1)
-          VERSION_NUMBER=${BASE_VERSION}.$(date +%Y%m%d_%H%M%S)_${{ steps.context.outputs.shortCommitId }}_${TAG_NAME//[(\)]}
-          echo "Base version from POM: $BASE_VERSION"
+          POM_VERSION=$(./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dtycho.mode=maven -DskipModules=true -Dexpression=project.version -q -DforceStdout)
+          if [[ "${POM_VERSION}" == *-SNAPSHOT ]]; then
+            BASE_VERSION=$(echo "${POM_VERSION}" | cut -d'-' -f 1)
+          else
+            BASE_VERSION=${POM_VERSION}
+          fi
+          if [[ "${{ github.base_ref }}" == "master" ]]; then
+            VERSION_NUMBER=${BASE_VERSION}.$(date +%Y%m%d_%H%M%S)
+          else
+            TAG_NAME=$(echo "${{ steps.context.outputs.branch }}" | cut -d ' ' -f2 | tr '#\/\.-' '_')
+            VERSION_NUMBER=${BASE_VERSION}.$(date +%Y%m%d_%H%M%S)_${{ steps.context.outputs.shortCommitId }}_${TAG_NAME//[(\)]}
+          fi
+          echo "Version from POM: ${POM_VERSION}"
+          echo "Base version from POM: ${BASE_VERSION}"
           echo "Building version: ${VERSION_NUMBER}"
           echo "::set-output name=version::${VERSION_NUMBER}"
 
-#      - name: Cache Maven packages
-#        uses: actions/cache@v2
-#        with:
-#          path: ~/.m2
-#          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-#          restore-keys: ${{ runner.os }}-m2-
-
-      - name: Set project version
+##########################
+# MAVEN BUILD START
+##########################
+      # Prepare version number
+      - name: 🚧 Set project version
         run: |-
           ./mvnw -B -Dstyle.color=always \
           -DnewVersion=${{ steps.version.outputs.version }} \
@@ -103,35 +107,32 @@ jobs:
           -Dtycho.mode=maven \
           versions:set
 
-#      - name: Update target definition
-#        run: |-
-#          ./mvnw -B -Dstyle.color=always \
-#          -Dtycho.mode=maven  \
-#          -P update-target-versions \
-#          -f ./common-targetdefinition/pom.xml \
-#          validate
-
-#      - name: Update category
-#        run: |-
-#          ./mvnw -B -Dstyle.color=always \
-#          -Dtycho.mode=maven \
-#          -P update-category-versions \
-#          -f ./common-site/pom.xml \
-#          validate
-
-      - name: Set tycho version
+      - name: 🚧 Set tycho version
         run: |-
           ./mvnw -B -Dstyle.color=always \
           -Dtycho.mode=maven  \
           -P update-category-versions \
           tycho-versions:update-eclipse-metadata
 
-      - name: Build with Maven
+      # Phase 1 - Build and deploy to judong nexus
+      - name: 🔥 Build with Maven (build, test)
         run: |-
           ./mvnw -B -Dstyle.color=always \
           -Drevision=${{ steps.version.outputs.version }} \
-          -Psign-artifacts,release-judong \
-          install
+          -Psign-artifacts \
+          -Prelease-judong \
+          deploy
+
+      # Phase 2 - Build and deploy to maven central
+      - name: 🎁 Deploy with Maven (central)
+        if: ${{ always() && startsWith(github.head_ref, 'release') && job.status == 'success' }}
+        run: |-
+          ./mvnw -B -Dstyle.color=always \
+          -Drevision=${{ steps.version.outputs.version }} \
+          -DdeployOnly \
+          -P"release-central,sign-artifacts,-verify-feature" \
+          -Dmaven.test.skip=true \
+          deploy
 
       - name: Release P2 (parallel uoload)
         run: |-
@@ -155,25 +156,72 @@ jobs:
 
           find $REPOSITORY_DIR -type f -print0 | xargs -0 -I file echo "file" | cut -c$REP_DIR_LEN- | xargs -P $NUM_OF_PROC -I {} bash -c 'callUpload "$@"' _ {} 
 
-
-#    - blackbelttechnology/parallel-upload@1.0.2:
-#      url:      ${JUDONG_P2_UPSTREAM}/judo-epp-common/${VERSION_NUMBER}
-#      path:     ${WERCKER_SOURCE_DIR}/common-site/target/repository
-#      username: ${JUDONG_NEXUS_USERNAME}
-#      password: ${JUDONG_NEXUS_PASSWORD}
-#      proc:     "6"
-
-#      - name: Release P2
+#      - name: 🔎 Sonar Metrics
+#        if: steps.context.outputs.branch == 'develop'
+#        continue-on-error: true
 #        run: |-
 #          ./mvnw -B -Dstyle.color=always \
-#          -Dtycho.mode=maven \
-#          -Prelease-dummy,release-p2-judong \
-#          -DdeployOnly \
-#          -DskipTests=true \
-#          -DskipModules=true \
-#          deploy
+#          -Dsonar.projectKey=epsilon-runtime-eclipse \
+#          -Dsonar.host.url=https://sonar.judo.technology \
+#          -Dsonar.login=${{ secrets.JUDO_SONAR_TOKEN }} \
+#          sonar:sonar
 
-      - name: Create message
+##########################
+# MAVEN BUILD END
+##########################
+
+      - name: 📌 Create version tag
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.OSS_PAT }}
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'refs/tags/v${{ steps.version.outputs.version }}',
+              sha: context.sha
+            })
+
+      - name: 📌 Tag to trigger PR merge on increment / release branch
+        if: |-
+          ${{ always() && 
+          (startsWith(github.head_ref, 'increment') || startsWith(github.head_ref, 'release')) && 
+          job.status == 'success' }}
+        uses: actions/github-script@v5
+        with:
+          github-token: ${{ secrets.OSS_PAT }}
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'refs/tags/merge-pr/${{ steps.current-pr.outputs.pr }}',
+              sha: context.sha
+            })
+
+      - name: 🏗️ Build Changelog
+        id: create_changelog
+        uses: mikepenz/release-changelog-builder-action@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          toTag: v${{ steps.version.outputs.version }}
+
+      - name: 📖 Create release
+        if: |-
+          ${{ always() && 
+          (startsWith(github.head_ref, 'develop') || github.ref == 'refs/heads/develop') && 
+          job.status == 'success' }}
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: v${{ steps.version.outputs.version }}
+          tag: v${{ steps.version.outputs.version }}
+          generateReleaseNotes: false
+          body: ${{steps.create_changelog.outputs.changelog}}
+          draft: false
+          prerelease: true
+
+      - name: 🎤 Create message
         id: message
         if: ${{ always() }}
         run: |-
@@ -189,13 +237,7 @@ jobs:
           fi
           echo "::set-output name=message::${message}"
 
-      - name: Tag commit
-        uses: tvdias/github-tagger@v0.0.1
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          tag: v${{ steps.version.outputs.version }}
-
-      - name: Send message to discord
+      - name: 📢 Send message to discord
         uses: sarisia/actions-status-discord@v1
         if: always()
         with:
